--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ethers": "^6.13.4",
     "iron-session": "^8.0.4",
     "lucide-react": "^0.462.0",
+    "mcp-handler": "^1.0.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
@@ -29,7 +30,7 @@
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.22.2",
     "wagmi": "^2.14.6",
-    "zod": "^3.24.4",
+    "zod": "3.21.4",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
