--- a/package.json
+++ b/package.json
@@ -16,21 +16,26 @@
     "@codemirror/view": "^6.38.1",
     "@privy-io/react-auth": "^2.21.1",
     "@privy-io/server-auth": "^1.30.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "@replit/codemirror-lang-solidity": "^6.0.2",
     "@tanstack/react-query": "^5.62.15",
     "@uiw/codemirror-theme-github": "^4.25.1",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.2",
     "d3": "^7.9.0",
     "ethers": "^6.13.4",
-    "lucide-react": "^0.462.0",
+    "lucide-react": "^0.542.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-markdown": "^9.0.1",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.33.3"
   },
@@ -52,6 +57,7 @@
     "postcss": "^8",
     "prettier": "^3.4.2",
     "tailwindcss": "^4.0.9",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.7.3"
   }
 }
