--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,14 @@
-API_URL=""
-VERCEL_URL="" # only need to set locally. avaialble at build + run time.
-SHARED_SECRET=""
+API_URL=http://0.0.0.0:8000
+
+VERCEL_URL=""
 COOKIE_PSWD=""
+
+CERTAIK_API_KEY=""
+
+NEXT_PUBLIC_TOKEN_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
+NEXT_PUBLIC_CREDIT_CONTRACT_ADDRESS=0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
+NEXT_PUBLIC_VERCEL_ENV="development"
+
+NEXT_PUBLIC_WC_PROJECT_ID=""
+NEXT_PUBLIC_ALCHEMY_API_KEY=""
+NEXT_PUBLIC_PRIVY_APP_ID=""
