--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@privy-io/server-auth": "^1.30.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@replit/codemirror-lang-solidity": "^6.0.2",
     "@tanstack/react-query": "^5.62.15",
     "@uiw/codemirror-theme-github": "^4.25.1",
