--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint && tsc --noEmit",
     "prepare": "husky"
@@ -36,25 +36,25 @@
     "dev": "^0.1.3",
     "ethers": "^6.15.0",
     "lucide-react": "^0.546.0",
-    "next": "^15.5.5",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next": "15.5.6",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-markdown": "^9.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.38.2"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^15.5.5",
+    "@next/eslint-plugin-next": "15.5.6",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/d3": "^7.4.3",
     "@types/node": "^20.19.21",
-    "@types/react": "^18.3.26",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^15.5.5",
+    "eslint-config-next": "15.5.6",
     "eslint-config-prettier": "^9.1.2",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
@@ -65,5 +65,9 @@
     "tailwindcss": "^4.1.14",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2"
   }
 }
