--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint . && tsc --noEmit",
+    "lint": "biome lint && tsc --noEmit",
     "prepare": "husky"
   },
   "dependencies": {
@@ -45,6 +45,7 @@
     "viem": "^2.38.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.6",
     "@next/eslint-plugin-next": "15.5.6",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/d3": "^7.4.3",
