--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -35,9 +36,11 @@
     "@tanstack/react-query": "^5.90.5",
     "@uiw/codemirror-theme-github": "^4.25.2",
     "@vercel/analytics": "^1.5.0",
+    "ahooks": "^3.9.6",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "codemirror": "^6.0.2",
     "d3": "^7.9.0",
     "dev": "^0.1.3",
@@ -52,7 +55,8 @@
     "sonner": "^2.0.7",
     "stytch": "^12.42.1",
     "tailwind-merge": "^3.3.1",
-    "viem": "^2.38.2"
+    "viem": "^2.38.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.6",
