--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "dev": "^0.1.3",
     "ethers": "^6.15.0",
     "lucide-react": "^0.546.0",
-    "next": "^16.0.0",
+    "next": "16.1.0-canary.19",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
