--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "d3": "^7.9.0",
     "dev": "^0.1.3",
     "ethers": "^6.15.0",
+    "fflate": "^0.8.2",
     "lucide-react": "^0.546.0",
     "next": "16.1.0-canary.19",
     "next-themes": "^0.4.6",
